--- a/College.html
+++ b/College.html
@@ -102,7 +102,7 @@
                 <a href="primaire.html">Primaire</a>
             </div>
             <div class="level-card">
-                <a href="Collège.html">Collège</a>
+                <a href="College.html">Collège</a>
             </div>
             <div class="level-card">
                 <a href="lycee.html">Lycée</a>
