--- a/Défis.html
+++ b/Défis.html
@@ -245,7 +245,7 @@
             <li><a href="Accueil.html">Accueil</a></li>
             <li><a href="pre-scolaire.html">Pré-scolaire</a></li>
             <li><a href="primaire.html">Primaire</a></li>
-            <li><a href="Collège.html">Collège</a></li>
+            <li><a href="College.html">Collège</a></li>
             <li><a href="lycee.html">Lycée</a></li>
         </ul>
     </nav>
