--- a/primaire.html
+++ b/primaire.html
@@ -124,10 +124,10 @@
                 <a href="primaire.html">Primaire</a>
             </div>
             <div class="level-card">
-                <a href="Collège.html">Collège</a>
+                <a href="College.html">Collège</a>
             </div>
             <div class="level-card">
-                <a href="lycee.html">Lycée</a>
+                <a href="Lycee.html">Lycée</a>
             </div>
         </div>
     </div>
