--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <a href="Accueil.html">Accueil</a>
     <a href="primaire.html">Primaire</a>
     <a href="pre-scolaire.html">Pré-scolaire</a>
-    <a href="college.html">Collège</a>
-    <a href="lycee.html">Lycée</a>
+    <a href="College.html">Collège</a>
+    <a href="Lycee.html">Lycée</a>
     <a href="jeux.html">Jeux éducatifs</a>
-    <a href="contact.html">Contact</a>
+    <a href="Contact.html">Contact</a>
   </nav>
 
   <main>
