--- a/jeux.html
+++ b/jeux.html
@@ -222,21 +222,20 @@
                 <strong>Casse-tête des allumettes</strong>
                 <div class="niveau">Niveau : Primaire, Collège</div>
                 <p>Déplacez les allumettes pour former des figures ou résoudre des équations.</p>
-                <a href="hhttps://www.animyjob.com/mag-article/45-enigmes-allumettes-les-casse-tete-les-plus-stimulants-a-resoudre/26-11-23/241"
+                <a href="https://www.animyjob.com/mag-article/45-enigmes-allumettes-les-casse-tete-les-plus-stimulants-a-resoudre/26-11-23/241"
                     target="_blank">Jouer</a>
             </li>
             <li class="jeu">
                 <strong>Jeu du Compte est Bon</strong>
                 <div class="niveau">Niveau : Collège, Lycée</div>
                 <p>Utilisez les nombres proposés pour atteindre le résultat cible.</p>
-                <a href="https://www.culturequizz.com/compte-est-bon/" target="_blank">Jouer</a>
+                <a href="./JeuduCompteestBon.html" target="_blank">Jouer</a>
             </li>
             <li class="jeu">
                 <strong>Jeu des Énigmes Mathématiques</strong>
                 <div class="niveau">Niveau : Primaire, Collège, Lycée</div>
                 <p>Résolvez des énigmes pour stimuler votre réflexion mathématique.</p>
-                <a href="https://loisirs.toutcomment.com/article/enigmes-mathematiques-avec-solution-14497.html"
-                    target="_blank">Jouer</a>
+                <a href="./tedt.html" target="_blank">Jouer</a>
             </li>
         </ul>
 
