--- a/jeux.html
+++ b/jeux.html
@@ -245,13 +245,13 @@
                 <strong>QCM pour le Primaire</strong>
                 <div class="niveau">Niveau : Primaire</div>
                 <p>Testez vos connaissances en mathématiques avec des QCM adaptés au primaire.</p>
-                <a href="https://www.logicieleducatif.fr/math/primaire.php" target="_blank">Accéder</a>
+                <a href="./qcm-maths-primaire.html" target="_blank">Accéder</a>
             </li>
             <li class="jeu">
                 <strong>QCM pour le Collège</strong>
                 <div class="niveau">Niveau : Collège</div>
                 <p>Révisez les notions du collège grâce à des QCM interactifs.</p>
-                <a href="https://www.mathsbook.fr/qcm-maths-college" target="_blank">Accéder</a>
+                <a href="./qcm-maths-college.html" target="_blank">Accéder</a>
             </li>
             <li class="jeu">
                 <strong>QCM pour le Lycée</strong>
