--- a/Accueil.html
+++ b/Accueil.html
@@ -93,6 +93,7 @@
 
         .feature:hover {
             transform: translateY(-8px) scale(1.04);
+            box-shadow: 0 4px 16px rgba(2, 235, 72, 0.87);
         }
 
         .feature img {
@@ -154,21 +155,31 @@
                 <img src="https://img.icons8.com/color/96/000000/math.png" alt="Jeux Mathématiques">
                 <h3>Jeux Mathématiques</h3>
                 <p>Résous des énigmes, puzzles et casse-têtes pour t'amuser tout en apprenant.</p>
+                <a href="jeux.html"
+                    style="margin-top:16px; display:inline-block; color:#4f8cff; text-decoration:underline; font-weight:bold;">Découvrir
+                    les jeux</a>
             </div>
             <div class="feature">
                 <img src="https://img.icons8.com/color/96/000000/open-book--v2.png" alt="Cours Interactifs">
                 <h3>Cours Interactifs</h3>
                 <p>Des leçons claires et illustrées pour comprendre chaque notion facilement.</p>
+                <a href="NiveauxScolaires.html"
+                    style="margin-top:16px; display:inline-block; color:#4f8cff; text-decoration:underline; font-weight:bold;">Explorer
+                    les niveaux scolaires</a>
             </div>
             <div class="feature">
-                <img src="https://img.icons8.com/color/96/000000/quiz.png" alt="Quiz et Défis">
+                <img src="./quis22.png" alt="Quiz et Défis">
                 <h3>Quiz & Défis</h3>
                 <p>Teste tes connaissances et défie tes amis avec des quiz adaptés à ton niveau.</p>
+                <a href="Quis.html"
+                    style="margin-top:16px; display:inline-block; color:#4f8cff; text-decoration:underline; font-weight:bold;">Participer
+                    aux quiz</a>
             </div>
         </div>
     </div>
     <footer>
-        © 2024 Maths Magiques. Apprendre, c'est magique !
+        © Entrez dans la Maison des Maths — Un espace dédié aux maths, pour grandir avec logique et curiosité. Un lieu
+        pour aimer les maths, tout simplement.
     </footer>
 </body>
 
