--- a/Défis.html
+++ b/Défis.html
@@ -235,6 +235,42 @@
 </head>
 
 <body>
+    <style>
+        nav {
+            background: #2877b3;
+            padding: 12px 0;
+            margin-bottom: 28px;
+            border-radius: 8px;
+            box-shadow: 0 1px 6px rgba(40, 119, 179, 0.08);
+            text-align: center;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 18px;
+            font-size: 1.08em;
+            font-weight: 500;
+            transition: color 0.2s, background 0.2s;
+            padding: 7px 14px;
+            border-radius: 4px;
+            display: inline-block;
+        }
+
+        nav a:hover,
+        nav a:focus {
+            background: #e1f0fa;
+            color: #2877b3;
+        }
+    </style>
+    <nav>
+        <a href="Accueil.html#">Accueil</a>
+        <a href="NiveauxScolaires.html">Niveaux Scolaire</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Quis.html">Quiz</a>
+        <a href="Défis.html">Défis</a>
+        <a href="jeux.html">Jeux</a>
+    </nav>
     <header>
         <div style="font-size:2em; font-weight:bold; letter-spacing:1px;">Défis mathématiques pour tous les niveaux
         </div>
@@ -262,37 +298,46 @@
             <img src="https://img.icons8.com/color/48/000000/leaf.png" alt="CP-CE1">
             <h3>1ère Primaire -2ème Primaire</h3>
             <p>Résous chaque jour des défis adaptés aux plus jeunes.</p>
-            <button>Commencer</button>
+            <!-- <button>Commencer</button> -->
+            <a href="./défipri1_2.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
+            </a>
         </div>
         <div class="level-card">
             <img src="https://img.icons8.com/color/48/000000/leaf.png" alt="CE2-CM1">
             <h3>CE2 - CM1</h3>
             <p>Défis stimulants pour développer tes compétences.</p>
-            <button>Commencer</button>
+            <a href="./DéfiMathsduourCE2CM1.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
+            </a>
         </div>
         <div class="level-card">
             <img src="https://img.icons8.com/color/48/000000/leaf.png" alt="CM2-6ème">
             <h3>CM2 - 6ème</h3>
             <p>Progresse en logique et en calcul grâce aux défis quotidiens.</p>
-            <button>Commencer</button>
+            <a href="./defiCM26eme.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
         </div>
         <div class="level-card">
             <img src="https://img.icons8.com/color/48/000000/school.png" alt="Collège">
             <h3>Collège</h3>
             <p>Relève des défis adaptés au programme du collège.</p>
-            <button>Commencer</button>
+            <a href="./DéfiMathsduJourCollège.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
         </div>
         <div class="level-card">
             <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="Lycée">
             <h3>Lycée</h3>
             <p>Prépare-toi aux examens avec des exercices variés.</p>
-            <button>Commencer</button>
+            <a href="./DéfiMathsduJourLycée.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
         </div>
         <div class="level-card">
             <img src="https://img.icons8.com/color/48/000000/brain.png" alt="Experts">
             <h3>Experts</h3>
             <p>Défis pour les passionnés de mathématiques et les curieux !</p>
-            <button>Commencer</button>
+            <a href="./défipri1_2.html" style="display:block; margin-top:10px; text-decoration:none;">
+                <button style="width:100%;">Commencer</button>
         </div>
     </div>
     <div class="features-grid">
