--- a/jeux.html
+++ b/jeux.html
@@ -257,7 +257,7 @@
                 <strong>QCM pour le Lycée</strong>
                 <div class="niveau">Niveau : Lycée</div>
                 <p>Préparez-vous aux examens avec des QCM couvrant le programme du lycée.</p>
-                <a href="https://www.mathsbook.fr/qcm-maths-lycee" target="_blank">Accéder</a>
+                <a href="./qcm-maths-lycee.html" target="_blank">Accéder</a>
             </li>
         </ul>
     </main>
