--- a/Accueil.html
+++ b/Accueil.html
@@ -168,7 +168,7 @@
                     les niveaux scolaires</a>
             </div>
             <div class="feature">
-                <img src="./quis22.png" alt="Quiz et Défis">
+                <img src="./" alt="Quiz et Défis">
                 <h3>Quiz & Défis</h3>
                 <p>Teste tes connaissances et défie tes amis avec des quiz adaptés à ton niveau.</p>
                 <a href="Quis.html"
@@ -178,8 +178,7 @@
         </div>
     </div>
     <footer>
-        © Entrez dans la Maison des Maths — Un espace dédié aux maths, pour grandir avec logique et curiosité. Un lieu
-        pour aimer les maths, tout simplement.
+        © Un lieu magique, une passion logique : bienvenue à la Maison des Maths.
     </footer>
 </body>
 
