--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maths Magiques - Accueil</title>
+  <title>Maison Des Maths</title>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet">
   <link rel="icon" href="./mathslogo.png" type="image/png">
   <meta name="description"
@@ -136,7 +136,7 @@
     <h1>Maison Des Maths</h1>
     <p>Découvre les mathématiques de façon ludique et interactive !</p>
     <nav>
-      <a href="Accueصil.html#">Accueil</a>
+      <a href="Accueil.html#">Accueil</a>
       <a href="NiveauxScolaires.html">Niveaux Scolaire</a>
       <a href="Contact.html">Contact</a>
       <a href="Quis.html">Quiz</a>
