--- a/Accueil.html
+++ b/Accueil.html
@@ -168,7 +168,7 @@
                     les niveaux scolaires</a>
             </div>
             <div class="feature">
-                <img src="./" alt="Quiz et Défis">
+                <img src alt="https://img.icons8.com/color/96/000000/open-book--v2.png" alt="Cours Interactifs">
                 <h3>Quiz & Défis</h3>
                 <p>Teste tes connaissances et défie tes amis avec des quiz adaptés à ton niveau.</p>
                 <a href="Quis.html"
