--- a/primaire.html
+++ b/primaire.html
@@ -134,12 +134,12 @@
     <p>Choisissez un niveau scolaire pour explorer les ressources disponibles.</p>
 
     <ul>
-        <li><a href="#">1ère Primaire</a></li>
-        <li><a href="#">2ème Primaire</a></li>
-        <li><a href="#">3ème Primaire</a></li>
-        <li><a href="#">4ème Primaire</a></li>
-        <li><a href="#">5ème Primaire</a></li>
-        <li><a href="#">6ème Primaire</a></li>
+        <li><a href="1ère Primaire.html">1ère Primaire</a></li>
+        <li><a href="2ème Primaire.html">2ème Primaire</a></li>
+        <li><a href="3ème Primaire.html">3ème Primaire</a></li>
+        <li><a href="4ème Primaire.html">4ème Primaire</a></li>
+        <li><a href="5ème Primaire.html">5ème Primaire</a></li>
+        <li><a href="6ème Primaire.html">6ème Primaire</a></li>
     </ul>
 
 
