--- a/ecole primaire/1ère Primaire.html
+++ b/ecole primaire/1ère Primaire.html
@@ -89,16 +89,16 @@
     </header>
     <main class="container">
         <div class="card">
-            <img src="https://img.icons8.com/color/96/000000/image.png" alt="Images">
-            <h2>Images</h2>
-            <a href="images/math1.jpg" target="_blank">Voir</a>
-            <a href="images/math1.zip" download>Télécharger</a>
+            <img src="https://img.icons8.com/color/96/000000/ms-powerpoint.png" alt="PowerPoint">
+            <h2>تحميل موارد المدرسة  الرائدة_العربة</h2>
+            <a href="https://drive.google.com/drive/folders/1u1zFhANnSyWCn5sNkmzb195xYVjXnUYk?usp=drive_link" target="_blank">Voir</a>
+            <a href="https://drive.google.com/drive/folders/1u1zFhANnSyWCn5sNkmzb195xYVjXnUYk?usp=drive_link" download>Télécharger</a>
         </div>
         <div class="card">
-            <img src="https://img.icons8.com/color/96/000000/ms-word.png" alt="Word">
-            <h2>Fichiers Word</h2>
-            <a href="docs/lesson1.docx" target="_blank">Voir</a>
-            <a href="docs/lesson1.docx" download>Télécharger</a>
+            <img src="https://img.icons8.com/color/96/000000/ms-powerpoint.png" alt="PowerPoint">
+            <h2>تحميل موارد المدرسة  الرائدة_القرنسية</h2>
+            <a href="https://drive.google.com/file/d/12fcAzqGXLeHqAu_YIdR6XtjkekaGj7wS/view?usp=drive_link" target="_blank">Voir</a>
+            <a href="https://drive.google.com/file/d/1XdTQmyhjiW8Vft2sYq3OKo76CJdrh1P4/view?usp=drive_link" download>Télécharger</a>
         </div>
         <div class="card">
             <img src="https://img.icons8.com/color/96/000000/pdf.png" alt="PDF">
@@ -108,9 +108,9 @@
         </div>
         <div class="card">
             <img src="https://img.icons8.com/color/96/000000/ms-powerpoint.png" alt="PowerPoint">
-            <h2>Présentations PPT</h2>
-            <a href="../aitben01.github.io/Maths_Niv1_Période1_Semaine1_Séance1-Drive-.pptx" target="_blank">Voir</a>
-            <a href="../aitben01.github.io/Maths_Niv1_Période1_Semaine1_Séance1-Drive-.pptx" download>Télécharger</a>
+            <h2>تحميل موارد المرسة الرائدة_الرضيات</h2>
+            <a href="https://drive.google.com/drive/folders/1z6pkmYCThYFTueKpyFvK9IhdPX-t_Fgx?usp=drive_link" target="_blank">Voir</a>
+            <a href="./Maths_Niv1_Période1_Semaine1_Séance1-Drive-.pptx" download>Télécharger</a>
         </div>
         <div class="card">
             <img src="https://img.icons8.com/color/96/000000/video.png" alt="Vidéo">
